--- a/Mi parque/Mi_Parque/index.html
+++ b/Mi parque/Mi_Parque/index.html
@@ -7,7 +7,7 @@
 
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="" crossorigin=""/>
-  <link rel="stylesheet" href="CSS/CSS" />
+  <link rel="stylesheet" href="CSS/estilos.css" />
   
 </head>
 <body>
